# LR1-Parser

./: .gitignore  CMakeLists.txt  README.md
include/: SOURCE.hpp
include/objects/: automata.hpp  grammar.hpp  parser.hpp  reader.hpp  state.hpp  table.hpp
src/: CMakeLists.txt  main.cpp
src/objects/: automata.cpp  grammar.cpp  parser.cpp  reader.cpp  state.cpp  table.cpp
tests/: CMakeLists.txt  test_parser.cpp  test_parser.hpp  test_table.cpp  test_table.hpp
tests/test_bs/: grammar.txt  test_words.txt
tests/test_lr/: grammar.txt  test_words.txt
tests/test_not_lr/: grammar.txt  test_words.txt
tests/test_simple/: grammar.txt  test_words.txt
